# ether0

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: lint-test.yaml
docs/: adding_tokens.ipynb  updated_mistral_chat_template.jinja
src/ether0/: chat.py  clients.py  data.py  lighteval_tasks.py  model_prompts.py  models.py  problem_prompts.py  rewards.py  utils.py
tests/: conftest.py  test_chat.py  test_data.py  test_lighteval_tasks.py  test_model_prompts.py  test_models.py  test_rewards.py  test_utils.py
